v8 build sometimes fails sharding/auto2.js, may be due to GC

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.0
    • Affects Version/s: None
    • Component/s: JavaScript
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      reported by Greg:
      In the v8 version we're using, it seems like IdleNotification()
      doesn't necessarily trigger garbage collection (by design), which
      causes auto2.js to fail sometimes on my v8 builds. If we set a global
      --expose-gc flag in v8 when creating the engine, there's a built-in
      gc() method which forces gc that we can use for testing - the other
      IdleNotification we can rename allowGC(). Is there a reason we
      shouldn't do this? I've got a patch ready, seems to work.

            Assignee:
            Antoine Girbal (Inactive)
            Reporter:
            Antoine Girbal (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: