- SERVER-4068: v8 build sometimes fails sharding/auto2.js, may be due to GC